Added bluetooth debugging (including tic monitoring+extra reference blocking)

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,5 +6,6 @@
     "terminal.integrated.env.linux": {
         "PATH": "/home/sambrown/.platformio/penv/bin:/home/sambrown/.platformio/penv:/home/sambrown/anaconda3/bin:/home/sambrown/anaconda3/condabin:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin:/usr/games:/usr/local/games:/snap/bin:/opt/cisco/anyconnect/bin:/opt/cisco/anyconnect/bin/",
         "PLATFORMIO_CALLER": "vscode"
-    }
+    },
+    "C_Cpp.errorSquiggles": "Enabled"
 }
